codepkg/objects/Faculty__c.object
<CustomObject>
    <fields>
        <fullName>Count_of_people__c</fullName>
        <formula>count_students__c + count_workers__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count of people</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Decan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Decan</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Worker__c.RecordType.Id</field>
                <operation>equals</operation>
                <valueField>Worker__c.Faclty__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Worker__c</referenceTo>
        <relationshipLabel>Faculties</relationshipLabel>
        <relationshipName>Faculties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>count_students__c</fullName>
        <label>count students</label>
        <summaryForeignKey>Student__c.Faculty__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>count_workers__c</fullName>
        <label>count workers</label>
        <summaryForeignKey>Worker__c.Faclty__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Faculty</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Faculty Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Faculties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>